# NotMario

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Platformer2D/: CMakeLists.txt
Platformer2D/include/: AABB.h  Constants.h  PhysicsBody.h  PhysicsManager.h
Platformer2D/include/Memory/: BodyAllocator.h
Platformer2D/src/: PhysicsBody.cpp  PhysicsManager.cpp
Platformer2D/src/Memory/: BodyAllocator.cpp
build-release/: CMakeCache.txt  Makefile  NotMario  NotMario.cbp  cmake_install.cmake
include/: Constants.h  Game.h  Map.h  RenderManager.h
include/Components/: AnimationC.h  Components.h  InputC.h  PhysicsC.h  RectangleC.h  RenderableC.h  SpriteC.h
include/Entities/: Block.h  Entity.h  Player.h  Prefabs.h
include/Managers/: AnimationManager.h  EntityManager.h  InputManager.h  PhysicsManager.h  RenderManager.h  ResourceManager.h
include/NotMario/: NotMario.h
include/Physics/: AABB.h  PhysicsBody.h  PhysicsManager.h
include/Physics/Math/: Vector2.h
include/Physics/Utils/: Allocator.h  BodyAllocator.h  PoolAllocator.h
include/Prefabs/: Block.h  Player.h
include/Scenes/: Scene.h
res/maps/TestScene_1/: Cloud.tsx  MarioTilesheet.tsx  Pipes.tsx  TestScene_1.map  TestScene_1.tmx  TestScene_1_0.map  (+1 more)
src/: Map.cpp  RenderManager.cpp
src/Components/: PhysicsC.cpp
src/Managers/: AnimationManager.cpp  EntityManager.cpp  InputManager.cpp  PhysicsManager.cpp  RenderManager.cpp  ResourceManager.cpp
src/NotMario/: NotMario.cpp
src/Physics/: PhysicsManager.cpp  Vector2.cpp
testing/physicsengine/: CMakeLists.txt  engine.cpp
(+11 files in other folders)
